# RL_Snake

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
saved/: Snake Game.txt
script/: build.py  deploy.py
src/utils/: __init__.py  constants.py  types.py  utils.py
