[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 150
ignore = "E402"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"
disallow_untyped_calls = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
